# My_Profile

./: .editorconfig  .env.example  .gitignore  .markdownlint.json  .vercelignore  404.html  CHANGELOG.md  CODE_REVIEW_CHECKLIST.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  PROJECT_STRUCTURE.md  QAQC_REPORT.md  QAQC_STANDARDS.md  README.md  SECURITY_GUIDE.md  WEB_APP_README.md  admin.html  config.js  index.html  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  robots.txt  script.js  sheets-loader.js  site.webmanifest  sitemap.xml  styles.css  tailwind.config.js  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json  spellcheck-config.yml  wordlist.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  security.md
.github/workflows/: cd.yml  ci.yml  validate-framework.yml
api/: auth.js  contact.js
assets/css/: style.css
assets/data/: achievements.json  projects.json  skills.json
assets/docs/: linkedin_url.txt
docs/: QA_QC_POLICY.md
prisma/: schema.prisma
scripts/: setup-project.sh  validate-framework.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/admin/pages/: page.tsx
src/components/: command-palette.tsx  theme-toggle.tsx
src/lib/: utils.ts
src/my_profile/: __init__.py  profile.py
templates/: .eslintrc.js  .flake8  .pre-commit-config.yaml  .prettierrc.js  Dockerfile  docker-compose.yml  jest.config.js  pyproject.toml  pytest.ini
tests/: test_profile.py
