[project]
name = "my-profile"
version = "0.1.0"
description = "Perfil profesional reproducible con estándares de QA/QC"
authors = [{ name = "Equipo QA" }]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]
